# discotime

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: actions.yml  actions_0.yml  actions_1.yml  testing.yml
docs/: conf.py  index.rst  installation.rst
docs/_static/: custom.css
docs/examples/: 00_mgus2-analysis.rst
docs/reference/: discotime.datasets.from_rstats.rst  discotime.datasets.rst  discotime.datasets.utils.rst  discotime.metrics.brier_score.rst  discotime.metrics.ipa.rst  discotime.metrics.rst  discotime.models.components.rst  discotime.models.models.rst  discotime.models.rst  discotime.rst  discotime.utils.estimators.rst  discotime.utils.misc.rst  discotime.utils.rst  discotime.utils.typing.rst  index.rst  modules.rst
examples/: 00_mgus2-analysis.qmd
examples/mgus2-cli/: README.md  cli.py  conf.yaml  hpo.py
src/discotime/: __init__.py
src/discotime/datasets/: __init__.py  from_rstats.py  utils.py
src/discotime/metrics/: __init__.py  brier_score.py  ipa.py
src/discotime/models/: __init__.py  components.py  models.py
src/discotime/utils/: __init__.py  estimators.py  misc.py  typing.py
tests/: conftest.py  test_lightning_module.py  test_metrics.py  test_mgus2.py  test_models.py  test_preprocessing.py  test_utils.py
