[metadata]
name = discotime
version = 0.0.4
url = https://github.com/peterchristofferholm/discotime
author = Peter Holm
author_email =  "Peter Holm" <petchdk@gmail.com>
description = Discrete-time competing risk analysis with neural networks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.10
package_dir = 
    =src
packages = find:
include_package_data = True
install_requires = 
    torch>=1.13.0,<1.14
    numpy>=1.21.0,<1.26
    lightning>=2.0,<2.1
    scikit-learn>=1.2.0,<2.0
    pandas>=1.4.0,<1.6.0
    einops>=0.6.0,<1.0.0
    rdata>=0.9.0,<1.0.0
    types-requests
    optuna>=3.1.0,<3.4.0


[options.packages.find]
where = src
exclude = test*

######################
# Tool configuration #
######################
[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[mypy-sklearn.*]
ignore_missing_imports = True


[tool:pytest]
testpaths = tests src/discotime
addopts = --cov --strict-markers --doctest-modules
xfail_strict = True

[coverage:run]
source = discotime
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/discotime/
    */site-packages/discotime

[tox:tox]
envlist = py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    hypothesis
commands =
    pytest {posargs}
usedevelop = True

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --allow-redefinition --ignore-missing-imports {posargs:src tests}

[testenv:docs]
deps =
    sphinx
    pydata-sphinx-theme
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/discotime/
     sphinx-build -n -W --keep-going -b html docs/ docs/_build/

[testenv:devdocs]
deps =
    sphinx
    pydata-sphinx-theme
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/reference/ \
        src/discotime/
    sphinx-autobuild -n -W -b html docs/ docs/_build/ --watch src/discotime/

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}
